--- a/forum/DFor/templates/i_post.html
+++ b/forum/DFor/templates/i_post.html
@@ -42,36 +42,39 @@
 		    </div>
 		</a>
 	    {% endif %}
-	    <div style="clear: both;"></div>
+	    
 	</div>
-	<div class="tabelka napis_autor">
-	    <p class="tekst {% if post.autor.plec = 'K' %}kobieta{% elif post.autor.plec = 'M' %}mezczyzna{% else %}nieznany{% endif %}">
-	    <a href="/dfor/uzytkownik/{{ post.autor.id }}">{{ post.autor }}</a></p>
-	    {% if post.autor.avatar %}
-		<p><img src="{{ media }}{{ post.autor.avatar }}" /></p>
-	    {% endif %}
-	    <p>
-	    {% if post.autor.data_urodzenia %}
-		Wiek: {{ post.autor.wiek }}<br>
-	    {% endif %}
-	    Posty: {{ post.autor.iloscPostow }}</p>
-	</div>
-	<div class="tabelka wiadomosc">
-	    <p class="daty">Dodany {{ post.data_utworzenia }}
+	<div style="clear: both;"></div>
+    </div>
+	
+    <div class="tabelka napis_autor">
+	<p class="tekst {% if post.autor.plec = 'K' %}kobieta{% elif post.autor.plec = 'M' %}mezczyzna{% else %}nieznany{% endif %}">
+	<a href="/dfor/uzytkownik/{{ post.autor.id }}">{{ post.autor }}</a></p>
+	{% if post.autor.avatar %}
+	    <p><img src="{{ media }}{{ post.autor.avatar }}" /></p>
+	{% endif %}
+	<p>
+	{% if post.autor.data_urodzenia %}
+	    Wiek: {{ post.autor.wiek }}<br>
+	{% endif %}
+	Posty: {{ post.autor.iloscPostow }}</p>
+    </div>
+    <div class="tabelka wiadomosc2">
+	<p class="daty">Dodany {{ post.data_utworzenia }}
 	    {% if post.zmieniony %}
 		zmieniony {{ post.data_modyfikacji }}
 	    {% endif %}
-	    </p>
-	    <p class="tresc {% if post.autor.podpis %}kreska{% endif %}">
+	</p>
+	<p class="tresc {% if post.autor.podpis %}kreska{% endif %}">
 	    {% if post.safe %}
 		{{ post.tekst|safe }}
 	    {% else %}
 		{{ post.tekst }}
 	    {% endif %}
-	    </p>
-	    {% if post.autor.podpis %}
-		<p class="podpis">{{ post.autor.podpis }}</p>
-	    {% endif %}
-	</div>
+	</p>
+	{% if post.autor.podpis %}
+	    <p class="podpis">{{ post.autor.podpis }}</p>
+	{% endif %}
+    </div>
     <div style="clear: both;"></div>
 </div> 
